--- a/package.json
+++ b/package.json
@@ -11,11 +11,14 @@
   },
   "dependencies": {
     "gsap": "^3.13.0",
+    "matter-js": "^0.20.0",
     "react": "^19.1.0",
-    "react-dom": "^19.1.0"
+    "react-dom": "^19.1.0",
+    "react-matter-js": "1.0.4"
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
+    "@types/matter-js": "^0.19.8",
     "@types/node": "^22.15.24",
     "@types/react": "^19.1.2",
     "@types/react-dom": "^19.1.2",
